# DataBase-Interface-Module

./: CMakeLists.txt  main.cpp
Components/: ButtonCustom.qml  InputLabel.qml  LeftSection.qml
